--- a/firmware/mos.yml
+++ b/firmware/mos.yml
@@ -56,6 +56,7 @@ libs:
   - origin: https://github.com/mongoose-os-libs/rpc-service-config
   - origin: https://github.com/mongoose-os-libs/rpc-service-fs
   - origin: https://github.com/mongoose-os-libs/rpc-uart
+  - origin: https://github.com/mongoose-os-libs/wifi
   - origin: https://github.com/mongoose-os-libs/http-server
 
 # Used by the mos tool to catch mos binaries incompatible with this file format
