--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -23,4 +23,8 @@ monitor_speed = 115200
 monitor_flags = --encoding hexlify
 
 ; Library options
-;lib_deps =
+lib_deps =
+    paulstoffregen/Time
+    jchristensen/Timezone
+    snakeye/LedMatrixDisplay
+    snakeye/RecurringTask
